# gato

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMANDOS.md  Dockerfile  README.md  RESUMEN_CURSO.md  config.py  docker-compose.yml  game_service.py  main.py  models.py  pyproject.toml  render.yaml  repository.py  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: config.py  logger.py
app/api/: dependencies.py  routes.py  stats.py
app/domain/: models.py
app/repository/: base.py  memory.py
app/service/: game_service.py
static/: index.html
tests/: conftest.py  test_api.py  test_game_service.py  test_game_service_mock.py
