[project]
name = "gato"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic-settings==2.6.1",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "ruff==0.7.4",
    "pytest==8.3.4",
    "httpx==0.27.2",
    "pytest-cov==6.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-fail-under=85"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
